--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" type="text/css" href="bootstrap.min.css">
 <link href="font-awesome.min.css" rel="stylesheet" type="text/css">
-<link rel="stylesheet" type="text/css" href="OwlCarousel2-2.2.1/owl.carousel.css">
-<link rel="stylesheet" type="text/css" href="OwlCarousel2-2.2.1/owl.theme.default.css">
-<link rel="stylesheet" type="text/css" href="OwlCarousel2-2.2.1/animate.css">
+<link rel="stylesheet" type="text/css" href="owl.carousel.css">
+<link rel="stylesheet" type="text/css" href="owl.theme.default.css">
+<link rel="stylesheet" type="text/css" href="animate.css">
 <link rel="stylesheet" type="text/css" href="main_styles.css">
 <link rel="stylesheet" type="text/css" href="responsive.css">
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
