--- a/blog.html
+++ b/blog.html
@@ -7,11 +7,11 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="description" content="FLY++ Project">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" type="text/css" href="styles/bootstrap4/bootstrap.min.css">
-<link href="plugins/font-awesome-4.7.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
-<link href="plugins/colorbox/colorbox.css" rel="stylesheet" type="text/css">
-<link rel="stylesheet" type="text/css" href="styles/blog_styles.css">
-<link rel="stylesheet" type="text/css" href="styles/blog_responsive.css">
+<link rel="stylesheet" type="text/css" href="bootstrap.min.css">
+<link href="font-awesome.min.css" rel="stylesheet" type="text/css">
+<link href="colorbox.css" rel="stylesheet" type="text/css">
+<link rel="stylesheet" type="text/css"blog_styles.css">
+<link rel="stylesheet" type="text/css"blog_responsive.css">
 </head>
 
 <body>
