--- a/index.html
+++ b/index.html
@@ -791,10 +791,10 @@
 									<p class="offers_text">Suspendisse potenti. In faucibus massa. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam eu convallis tortor.</p>
 									<div class="offers_icons">
 										<ul class="offers_icons_list">
-											<li class="offers_icons_item"><img src="images/post.png" alt=""></li>
-											<li class="offers_icons_item"><img src="images/compass.png" alt=""></li>
-											<li class="offers_icons_item"><img src="images/bicycle.png" alt=""></li>
-											<li class="offers_icons_item"><img src="images/sailboat.png" alt=""></li>
+											<li class="offers_icons_item"><img src="post.png" alt=""></li>
+											<li class="offers_icons_item"><img src="compass.png" alt=""></li>
+											<li class="offers_icons_item"><img src="bicycle.png" alt=""></li>
+											<li class="offers_icons_item"><img src="sailboat.png" alt=""></li>
 										</ul>
 									</div>
 									<div class="offers_link"><a href="offers.html">read more</a></div>
@@ -828,10 +828,10 @@
 									<p class="offers_text">Suspendisse potenti. In faucibus massa. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam eu convallis tortor.</p>
 									<div class="offers_icons">
 										<ul class="offers_icons_list">
-											<li class="offers_icons_item"><img src="images/post.png" alt=""></li>
-											<li class="offers_icons_item"><img src="images/compass.png" alt=""></li>
-											<li class="offers_icons_item"><img src="images/bicycle.png" alt=""></li>
-											<li class="offers_icons_item"><img src="images/sailboat.png" alt=""></li>
+											<li class="offers_icons_item"><img src="post.png" alt=""></li>
+											<li class="offers_icons_item"><img src="compass.png" alt=""></li>
+											<li class="offers_icons_item"><img src="bicycle.png" alt=""></li>
+											<li class="offers_icons_item"><img src="sailboat.png" alt=""></li>
 										</ul>
 									</div>
 									<div class="offers_link"><a href="offers.html">read more</a></div>
@@ -865,10 +865,10 @@
 									<p class="offers_text">Suspendisse potenti. In faucibus massa. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam eu convallis tortor.</p>
 									<div class="offers_icons">
 										<ul class="offers_icons_list">
-											<li class="offers_icons_item"><img src="images/post.png" alt=""></li>
-											<li class="offers_icons_item"><img src="images/compass.png" alt=""></li>
-											<li class="offers_icons_item"><img src="images/bicycle.png" alt=""></li>
-											<li class="offers_icons_item"><img src="images/sailboat.png" alt=""></li>
+											<li class="offers_icons_item"><img src="post.png" alt=""></li>
+											<li class="offers_icons_item"><img src="compass.png" alt=""></li>
+											<li class="offers_icons_item"><img src="bicycle.png" alt=""></li>
+											<li class="offers_icons_item"><img src="sailboat.png" alt=""></li>
 										</ul>
 									</div>
 									<div class="offers_link"><a href="offers.html">read more</a></div>
@@ -975,8 +975,8 @@
 							<!-- Testimonial Item -->
 							<div class="owl-item">
 								<div class="test_item">
-									<div class="test_image"><img src="images/test_1.jpg" alt=""></div>
-									<div class="test_icon"><img src="images/backpack.png" alt=""></div>
+									<div class="test_image"><img src="test_1.jpg" alt=""></div>
+									<div class="test_icon"><img src="backpack.png" alt=""></div>
 									<div class="test_content_container">
 										<div class="test_content">
 											<div class="test_item_info">
@@ -1066,7 +1066,7 @@
 				<!-- Trending Item -->
 				<div class="col-lg-3 col-sm-6">
 					<div class="trending_item clearfix">
-						<div class="trending_image"><img src="images/trend_1.png" alt="https://unsplash.com/@fransaraco"></div>
+						<div class="trending_image"><img src="trend_1.png" alt="https://unsplash.com/@fransaraco"></div>
 						<div class="trending_content">
 							<div class="trending_title"><a href="#">grand hotel</a></div>
 							<div class="trending_price">From $182</div>
@@ -1078,7 +1078,7 @@
 				<!-- Trending Item -->
 				<div class="col-lg-3 col-sm-6">
 					<div class="trending_item clearfix">
-						<div class="trending_image"><img src="images/trend_2.png" alt="https://unsplash.com/@grovemade"></div>
+						<div class="trending_image"><img src="trend_2.png" alt="https://unsplash.com/@grovemade"></div>
 						<div class="trending_content">
 							<div class="trending_title"><a href="#">mars hotel</a></div>
 							<div class="trending_price">From $182</div>
@@ -1090,7 +1090,7 @@
 				<!-- Trending Item -->
 				<div class="col-lg-3 col-sm-6">
 					<div class="trending_item clearfix">
-						<div class="trending_image"><img src="images/trend_3.png" alt="https://unsplash.com/@jbriscoe"></div>
+						<div class="trending_image"><img src="trend_3.png" alt="https://unsplash.com/@jbriscoe"></div>
 						<div class="trending_content">
 							<div class="trending_title"><a href="#">queen hotel</a></div>
 							<div class="trending_price">From $182</div>
@@ -1102,7 +1102,7 @@
 				<!-- Trending Item -->
 				<div class="col-lg-3 col-sm-6">
 					<div class="trending_item clearfix">
-						<div class="trending_image"><img src="images/trend_4.png" alt="https://unsplash.com/@oowgnuj"></div>
+						<div class="trending_image"><img src="trend_4.png" alt="https://unsplash.com/@oowgnuj"></div>
 						<div class="trending_content">
 							<div class="trending_title"><a href="#">mars hotel</a></div>
 							<div class="trending_price">From $182</div>
@@ -1114,7 +1114,7 @@
 				<!-- Trending Item -->
 				<div class="col-lg-3 col-sm-6">
 					<div class="trending_item clearfix">
-						<div class="trending_image"><img src="images/trend_5.png" alt="https://unsplash.com/@mindaugas"></div>
+						<div class="trending_image"><img src="trend_5.png" alt="https://unsplash.com/@mindaugas"></div>
 						<div class="trending_content">
 							<div class="trending_title"><a href="#">grand hotel</a></div>
 							<div class="trending_price">From $182</div>
@@ -1126,7 +1126,7 @@
 				<!-- Trending Item -->
 				<div class="col-lg-3 col-sm-6">
 					<div class="trending_item clearfix">
-						<div class="trending_image"><img src="images/trend_6.png" alt="https://unsplash.com/@itsnwa"></div>
+						<div class="trending_image"><img src="trend_6.png" alt="https://unsplash.com/@itsnwa"></div>
 						<div class="trending_content">
 							<div class="trending_title"><a href="#">mars hotel</a></div>
 							<div class="trending_price">From $182</div>
@@ -1138,7 +1138,7 @@
 				<!-- Trending Item -->
 				<div class="col-lg-3 col-sm-6">
 					<div class="trending_item clearfix">
-						<div class="trending_image"><img src="images/trend_7.png" alt="https://unsplash.com/@rktkn"></div>
+						<div class="trending_image"><img src="trend_7.png" alt="https://unsplash.com/@rktkn"></div>
 						<div class="trending_content">
 							<div class="trending_title"><a href="#">queen hotel</a></div>
 							<div class="trending_price">From $182</div>
@@ -1150,7 +1150,7 @@
 				<!-- Trending Item -->
 				<div class="col-lg-3 col-sm-6">
 					<div class="trending_item clearfix">
-						<div class="trending_image"><img src="images/trend_8.png" alt="https://unsplash.com/@thoughtcatalog"></div>
+						<div class="trending_image"><img src="trend_8.png" alt="https://unsplash.com/@thoughtcatalog"></div>
 						<div class="trending_content">
 							<div class="trending_title"><a href="#">mars hotel</a></div>
 							<div class="trending_price">From $182</div>
@@ -1164,7 +1164,7 @@
 	</div>
 
 	<div class="contact">
-		<div class="contact_background" style="background-image:url(images/contact.png)"></div>
+		<div class="contact_background" style="background-image:url(contact.png)"></div>
 
 		<div class="container">
 			<div class="row">
@@ -1200,7 +1200,7 @@
 					<div class="footer_col">
 						<div class="footer_content footer_about">
 							<div class="logo_container footer_logo">
-								<div class="logo"><a href="#"><img src="images/logo.png" alt="">FLY++</a></div>
+								<div class="logo"><a href="#"><img src="logo.png" alt="">FLY++</a></div>
 							</div>
 							<p class="footer_about_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus quis vu lputate eros, iaculis consequat nisl. Nunc et suscipit urna. Integer eleme ntum orci eu vehicula pretium.</p>
 							<ul class="footer_social_list">
@@ -1222,7 +1222,7 @@
 							
 							<!-- Footer blog item -->
 							<div class="footer_blog_item clearfix">
-								<div class="footer_blog_image"><img src="images/footer_blog_1.jpg" alt="https://unsplash.com/@avidenov"></div>
+								<div class="footer_blog_image"><img src="footer_blog_1.jpg" alt="https://unsplash.com/@avidenov"></div>
 								<div class="footer_blog_content">
 									<div class="footer_blog_title"><a href="blog.html">Travel with us this year</a></div>
 									<div class="footer_blog_date">Nov 29, 2017</div>
@@ -1231,7 +1231,7 @@
 							
 							<!-- Footer blog item -->
 							<div class="footer_blog_item clearfix">
-								<div class="footer_blog_image"><img src="images/footer_blog_2.jpg" alt="https://unsplash.com/@deannaritchie"></div>
+								<div class="footer_blog_image"><img src="footer_blog_2.jpg" alt="https://unsplash.com/@deannaritchie"></div>
 								<div class="footer_blog_content">
 									<div class="footer_blog_title"><a href="blog.html">New destinations for you</a></div>
 									<div class="footer_blog_date">Nov 29, 2017</div>
@@ -1240,7 +1240,7 @@
 
 							<!-- Footer blog item -->
 							<div class="footer_blog_item clearfix">
-								<div class="footer_blog_image"><img src="images/footer_blog_3.jpg" alt="https://unsplash.com/@bergeryap87"></div>
+								<div class="footer_blog_image"><img src="footer_blog_3.jpg" alt="https://unsplash.com/@bergeryap87"></div>
 								<div class="footer_blog_content">
 									<div class="footer_blog_title"><a href="blog.html">Travel with us this year</a></div>
 									<div class="footer_blog_date">Nov 29, 2017</div>
@@ -1277,19 +1277,19 @@
 						<div class="footer_content footer_contact">
 							<ul class="contact_info_list">
 								<li class="contact_info_item d-flex flex-row">
-									<div><div class="contact_info_icon"><img src="images/placeholder.svg" alt=""></div></div>
+									<div><div class="contact_info_icon"><img src="placeholder.svg" alt=""></div></div>
 									<div class="contact_info_text">601-602, 6TH floor, Emaar, MGF Capital Tower 1, Sikanderpur, Sector-26, Gurugram, Haryana 122002</div>
 								</li>
 								<li class="contact_info_item d-flex flex-row">
-									<div><div class="contact_info_icon"><img src="images/phone-call.svg" alt=""></div></div>
+									<div><div class="contact_info_icon"><img src="phone-call.svg" alt=""></div></div>
 									<div class="contact_info_text">2556-808-8613</div>
 								</li>
 								<li class="contact_info_item d-flex flex-row">
-									<div><div class="contact_info_icon"><img src="images/message.svg" alt=""></div></div>
+									<div><div class="contact_info_icon"><img src="message.svg" alt=""></div></div>
 									<div class="contact_info_text"><a href="mailto:hello@aionos.ai?Subject=Hello" target="_top">hello@aionos.ai</a></div>
 								</li>
 								<li class="contact_info_item d-flex flex-row">
-									<div><div class="contact_info_icon"><img src="images/planet-earth.svg" alt=""></div></div>
+									<div><div class="contact_info_icon"><img src="planet-earth.svg" alt=""></div></div>
 									<div class="contact_info_text"><a href="https://aionos.io/">https://aionos.io/</a></div>
 								</li>
 							</ul>
