--- a/blog.html
+++ b/blog.html
@@ -10,8 +10,8 @@
 <link rel="stylesheet" type="text/css" href="bootstrap.min.css">
 <link href="font-awesome.min.css" rel="stylesheet" type="text/css">
 <link href="colorbox.css" rel="stylesheet" type="text/css">
-<link rel="stylesheet" type="text/css"blog_styles.css">
-<link rel="stylesheet" type="text/css"blog_responsive.css">
+<link rel="stylesheet" type="text/css href="blog_styles.css">
+<link rel="stylesheet" type="text/css href="blog_responsive.css">
 </head>
 
 <body>
