--- a/blog.html
+++ b/blog.html
@@ -9,9 +9,9 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" type="text/css" href="bootstrap.min.css">
 <link href="font-awesome.min.css" rel="stylesheet" type="text/css">
-<link href="colorbox.css" rel="stylesheet" type="text/css">
-<link rel="stylesheet" type="text/css href="blog_styles.css">
-<link rel="stylesheet" type="text/css href="blog_responsive.css">
+<link href="colorbox.css" rel="stylesheet" type="text/css">   
+	<link rel="stylesheet" type="text/css" href="blog_styles.css">
+    <link rel="stylesheet" type="text/css" href="blog_responsive.css">
 </head>
 
 <body>
